add new interface